--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -1,6 +1,8 @@
 name: Docker Hub
 
 on:
+  schedule:
+    - cron: '30 5 * */2 1-5'
   push:
     branches:
       - 'master'
@@ -31,4 +33,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/riscv64,linux/s390x
           push: true
-          tags: alcapone1933/syslog-log-viewer:test
+          tags: alcapone1933/syslog-log-viewer:latest
