--- a/.github/workflows/build-github.yml
+++ b/.github/workflows/build-github.yml
@@ -1,4 +1,4 @@
-name: Github Build
+name: Build
 
 # Controls when the workflow will run
 on:
@@ -37,11 +37,11 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Docker meta
-        id: meta # you'll use this in the next step
+        id: meta
         uses: docker/metadata-action@v3
         with:
           # list of Docker images to use as base name for tags
@@ -58,4 +58,3 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
