--- a/.github/workflows/build-jfrog.yml
+++ b/.github/workflows/build-jfrog.yml
@@ -55,6 +55,6 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/riscv64,linux/s390x
-          push: ${{ github.event_name != 'pull_request:' }}
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_jfrog.outputs.tags }}
           labels: ${{ steps.meta_jfrog.outputs.labels }}
