„.github/workflows/build-github.yml“ ändern

--- a/.github/workflows/build-github.yml
+++ b/.github/workflows/build-github.yml
@@ -1,15 +1,15 @@
 name: Build
 
 # Controls when the workflow will run
-on:
-  push:
-    branches:
-      - 'master'
-    tags:
+# on:
+  # push:
+    # branches:
+      # - 'master'
+    # tags:
       - 'v*.*.*'
-  pull_request:
-    branches:
-      - 'master'
+  # pull_request:
+    # branches:
+      # - 'master'
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
