--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.9"
 services:
   syslog-log-viewer:
-    build:
-      dockerfile: ./Dockerfile
-    image: syslog-log-viewer:latest
-    # image: alcapone1933/syslog-log-viewer:latest
+    # build:
+      # dockerfile: ./Dockerfile
+    # image: syslog-log-viewer:latest
+    image: alcapone1933/syslog-log-viewer:latest
     container_name: syslog-log-viewer
     restart: always
     stdin_open: true 
