--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ type: docker
 name: BUILD-TEST
 steps:
   - name: Build Multi-arch
-    image: thegeeklab/drone-docker-buildx
+    image: alcapone1933/drone:docker-buildx
     privileged: true
     settings:
       platforms: linux/amd64,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/riscv64,linux/s390x
@@ -26,7 +26,7 @@ type: docker
 name: BUILD
 steps:
   - name: Build Multi-arch
-    image: thegeeklab/drone-docker-buildx
+    image: alcapone1933/drone:docker-buildx
     privileged: true
     settings:
       username: 
